# Jnana---A-Second-brain

./: .gitignore  CHANGELOG.md  LICENSE-EXCEPTION.md  PLAN.md  PROGRESS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_SIGNING.md  TABLES.md  architecture_deep_dive.md  astro_idea.md  index.html  package-lock.json  package.json  plan folders vault.md  plan working notes.md  problems with quiz.md  ss  vite.config.ts
.github/workflows/: build-macos.yml  ci.yml  installers.yml
examples/sample-catalog/: README.md  catalog.json
examples/sample-plugin/: README.md  manifest.json  package.json  smoke.test.tsx
src/: App.css  App.module.css  App.tsx  AppLayout.tsx  main.css  main.tsx  setupTests.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  ai_workspace.rs  annotations.rs  assets.rs  canvas.rs  chat.rs  data.rs  embeddings.rs  export.rs  folders.rs  media.rs  media_layout.rs  mod.rs  notes.rs  plugin_loader.rs  plugins.rs  themes.rs  vaults.rs  web.rs  workspaces.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src/context/: NotesContext.tsx  TranscriptionContext.tsx
src/core/: aiWorkspace.ts  annotations.ts  canvas.test.ts  canvas.ts  chat.ts  data.ts  export.test.ts  export.ts  folders.ts  ink.ts  linkPreview.ts  media.ts  mediaLayout.test.ts  mediaLayout.ts  notes.ts  saveCsv.ts  search.ts  table.test.ts  table.ts  tags.test.ts  tags.ts  themes.ts  vaults.ts  workspaces.ts
src/hooks/: useActiveWorkspace.ts  useAiScope.ts  useAnnotations.ts  useCanvas.ts  useCanvasList.ts  useChatHistory.ts  useCollections.ts  useComposer.ts  useComposerOptions.ts  useDocumentUpload.ts  useFavourites.ts  useFolders.test.ts  useFolders.ts  useGraph.ts  useGraphForces.ts  useInView.ts  useNoteAttachments.ts  useNotes.ts  usePdfAnnotations.ts  usePendingMedia.ts  usePresets.ts  useProjects.ts  useRag.ts  useSaveLastOpened.ts  useTheme.ts  (+7 more)
whisper-server/: Dockerfile  Dockerfile.cpu  README.md  app.py
(+271 files in other folders)
