[package]
name = "jnana"
version = "0.1.0"
description = "Jnana — a local-first desktop second brain: notes, media, a wikilink graph, workspaces, and an optional locally-grounded AI layer."
authors = ["Jnana Project"]
edition = "2021"
# AGPL-3.0-only, with the plugin additional-permission in ../LICENSE-EXCEPTION.md
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "stream"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
